# haskell-android-example

./: .gitignore  HelloJni.java  README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml  build.xml  local.properties  project.properties
app/src/main/java/co/uphere/chatter/: Chatter.java
app/src/main/java/com/example/hellojni/: HelloJni.java  Sub.java
app/src/main/java/com/uphere/chatter/: Chatter.java
app/src/main/java/com/uphere/vchatter/: Bridge.java  CameraFragment.java  Chatter.java  MapFragment.java  NicknameDialogFragment.java  ObjectRegisterer.java  VideoFragment.java
app/src/main/jni/: wrapper.c
app/src/main/res/layout/: camera.xml  canvas.xml  chatter.xml  dialog.xml  dummy.xml  main.xml  map.xml  sub.xml  video.xml
app/src/main/res/menu/: toolbar.xml
app/src/main/res/values/: strings.xml
google-play-services_lib/: build.gradle
hs/: Client.hs  Common.hs  HaskellActivity.cabal  HaskellActivity.hs  JChatter.cabal  build.sh  init.c  init.cpp
hs/android-bridge/: android-bridge.c  android-bridge.cabal  android-bridge.cpp  android-bridge.h  build.sh  hs_driver.c  rqueue.cpp  rqueue.h  wqueue.cpp  wqueue.h
hs/android-bridge/Android/: Bridge.hs
test/: wrapper.c
test/jni/: Android.mk  Application.mk
trash/: HaskellActivity.hs
