name: HaskellActivity
version: 0.1.0.0
-- synopsis:
-- description:
license: MIT
-- license-file: LICENSE
-- author: 
-- maintainer: 
-- copyright:
-- category:
build-type: Simple
cabal-version: >=1.8

executable libhaskell.so
  build-depends: base, text, transformers, monad-loops, text-binary, network-simple, bytestring, stm, binary
  ghc-options: -fPIC -threaded -no-hs-main -optl-llog
  main-is: Client.hs
  c-sources: init.c
  exposed-modules: HaskellActivity
  cc-options: -shared
  ld-options: -shared
