name: HaskellActivity
version: 0.1.0.0
-- synopsis:
-- description:
license: MIT
-- license-file: LICENSE
-- author: 
-- maintainer: 
-- copyright:
-- category:
build-type: Simple
cabal-version: >=1.8

executable libhaskell.so
  build-depends: base,
                 text,
                 transformers,
                 monad-loops,
                 text-binary,
                 network-simple,
                 bytestring,
                 stm,
                 binary,
                 android-bridge
  ghc-options:  -no-hs-main -debug -fPIC -threaded
  main-is: Client.hs
  c-sources: init.cpp
  cc-options: -w -shared -fPIC -std=c++11 -frtti -D_STLP_USE_NEWALLOC
  ld-options: -shared -llog

              -- -L/nix/store/0q4hzx6aj90g3f74lfgs6h8263ypy0nr-android-ndk-r10c/libexec/android-ndk-r10c/sources/cxx-stl/stlport/libs/armeabi  -lstlport_static

              --  -D_STLP_USE_MALLOC
