name: JChatter
version: 0.1.0.0
synopsis: A chatting app for android
description: Chatting application for Android using android-bridge
license: BSD3
license-file: LICENSE
author: Ian-Woo Kim
maintainer: Ian-Woo Kim<ianwookim@gmail.com>
build-type: Simple
cabal-version: >=1.8

executable libhaskell.so
  build-depends: base,
                 text,
                 transformers,
                 monad-loops,
                 text-binary,
                 network-simple,
                 bytestring,
                 stm,
                 binary,
                 android-bridge
  ghc-options:  -no-hs-main -debug -fPIC -threaded
  main-is: Client.hs
  c-sources: init.cpp
  cc-options: -w -shared -fPIC -std=c++11 -frtti 
  ld-options: -shared -llog
  extra-libraries: c++_shared

