name: android-bridge
version: 0.0
-- synopsis:
-- description:
license: MIT
-- license-file: LICENSE
-- author: 
-- maintainer: 
-- copyright:
-- category:
build-type: Simple
cabal-version: >=1.8


library
  build-depends: base
  ghc-options:  -debug -fPIC -threaded
  c-sources: android-bridge.cpp
  includes:  uthash.h
             android-bridge.h
  install-includes: uthash.h
                    android-bridge.h
  exposed-modules: Android.Bridge
  cc-options: -shared -fPIC
  ld-options: -shared -llog

                              
--executable libhaskell.so
--  build-depends: base, text, transformers, monad-loops, text-binary, network-simple, bytestring, stm, binary
--  ghc-options:  -no-hs-main -debug -fPIC -threaded
  --  -optc-shared -optl-llog -threaded
--  main-is: Client.hs
--  c-sources: init.c
  -- exposed-modules: HaskellActivity
  -- extra-libraries: log
--  cc-options: -shared -fPIC
--  ld-options: -shared -llog
