name: android-bridge
version: 0.0
synopsis: bridge for haskell and java in android
description: This package provides bridge between haskell and java
license: MIT
license-file: LICENSE
author: Ian-Woo Kim
maintainer: Ian-Woo Kim<ianwookim@gmail.com>
-- copyright:
-- category:
build-type: Simple
cabal-version: >=1.8


library
  build-depends:    base
  ghc-options:      -debug -fPIC -threaded
  cc-options:       -shared -fPIC -std=c++11  -frtti
  ld-options:       -shared -llog
  c-sources:        android-bridge.cpp
                    wqueue.cpp
  -- includes:         android-bridge.h
  install-includes: android-bridge.h
                    wqueue.h
  exposed-modules:  Android.Bridge

 -- -D_STLP_USE_MALLOC
 --   -D_STLP_USE_NEWALLOC